user sign up routes, validation complete

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -6,6 +6,7 @@ html
         title="App Overflow"
         link(rel='stylesheet' href='/stylesheets/reset.css')
         link(rel="stylesheet", href="/stylesheets/layout.css")
+        link(rel="stylesheet", href="/stylesheets/user-signup.css")
   body
     nav.nav
       .hambuger-container: i(class="fas fa-bars" id="hamburger")
