--- a/views/users-login.pug
+++ b/views/users-login.pug
@@ -3,13 +3,17 @@ extends layout.pug
 include utils.pug
 
 block content
-    +validationErrorSummary(errors)
-    form(action= '/users/login' method='post')
-        input(type='hidden' name='_csrf' value=csrfToken)
-        +field('Email', 'emailAddress', emailAddress)
-        +field('Password', 'password', null, 'password')
-        div
-            button(type='submit') Login
-            a(href='/') cancel
-    div
-        p: a(href='/users/signup') Create new account
+    .errors-container
+        +validationErrorSummary(errors)
+    div.form-card
+     div.login-box
+        form(action= '/users/login' method='post')
+            input(type='hidden' name='_csrf' value=csrfToken)
+            +field('Email', 'emailAddress', emailAddress)
+            +field('Password', 'password', null, 'password')
+            div.login-button-container
+                button(type='submit' class='login-button') Log in
+                a(href='/') Cancel
+     div.signup-link
+         p Don't have an account?
+            a(href='/users/signup')  Sign up
