--- a/views/questionform.pug
+++ b/views/questionform.pug
@@ -1,7 +1,12 @@
-form(action="/questions" method="post")
-        input(type="hidden" name="_csrf" value=csrfToken)
-        label(for="title") Title
-        input(type="text" name="title")
-        label(for="content") Details
-        input(type="textarea" name="content")
-        button Post Question
+extends layout.pug
+include utils.pug
+block content
+    +validationErrorSummary(errors)
+    div(id="questionFormContainer").form-style-2
+        form(action="/questions" method="post").questionForm
+                input(type="hidden" name="_csrf" value=csrfToken)
+                label(for="title") Title
+                input(type="text" name="title" value= (body === undefined)? "":body.title)
+                label(for="content") Details
+                textarea(type="textarea" name="content").questionTextArea=(body === undefined)? "":body.content
+                button(id="postQuestion") Post Question
