--- a/views/user-profile.pug
+++ b/views/user-profile.pug
@@ -3,3 +3,10 @@ extends layout.pug
 block content 
     h1 #{user.username}
     a(href="/users/1") link 
+
+    .profile-questions
+        ul.profile-questions-list
+    each question in user.Questions
+        li
+            p=question.title
+            p: a(href=`/questions/${question.id}`) View Question
