--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -29,7 +29,7 @@
 .nav-logo{
     width: 150px;
     height: 30px;
-    
+
 }
 
 .nav-list{
@@ -37,7 +37,7 @@
     list-style: none;
     align-items: center;
     justify-content: space-evenly;
-    
+
 }
 
 .nav-list-item{
@@ -85,14 +85,14 @@
     gap: 5px;
 }
 
-.nav-action-login, .nav-action-signup{
+.nav-action-login, .nav-action-signup, .nav-action-logout{
     text-decoration: none;
     padding: 0.8em;
     font-size: 13px;
     cursor: pointer;
     text-align: center;
     border-radius: 3px;
-    width: 65px;
+    width: 75px;
 
 }
 
@@ -100,12 +100,19 @@
     color: rgb(57,115,157);
     border: 1px solid rgb(122,167,199);
     background-color: rgb(225,236,244);
-    
+
 }
 
 .nav-action-signup{
     color: rgb(249,252,255);
     background-color: rgb(10,149,255);
+}
+
+.nav-action-logout{
+    color: rgb(57,115,157);
+    border: 1px solid rgb(122,167,199);
+    background-color: rgb(225,236,244);
+
 }
 
 .nav-hover:hover{
@@ -118,4 +125,23 @@
 
 .nav-action-signup:hover{
     background-color: rgb(0, 109, 192);
+}
+
+.nav-action-logout:hover{
+    background-color: rgb(131, 162, 184)
+}
+
+.user-icon {
+    color: rgb(122,167,199);
+    text-decoration: none;
+    font-size: 30px;
+    display: flex;
+    justify-content: center;
+}
+
+.user-name-profile {
+    text-decoration: none;
+    margin-left: 3px;
+    position: relative;
+    bottom: 6px;
 }
