fixed layout and navbar to have more relevant content

--- a/views/user-profile.pug
+++ b/views/user-profile.pug
@@ -2,7 +2,7 @@ extends layout.pug
 
 block content 
     h1 #{userFound.username}
-    a(href="/users/1") link 
+    a(href="/questions") link 
 
     .profile-questions
         ul.profile-questions-list
