--- a/views/user-signup.pug
+++ b/views/user-signup.pug
@@ -14,10 +14,10 @@ block content
                 p.signup-info-text Unlock new privileges like voting and commenting
             .signup-info-subsections
                 i(class="fas fa-tags")
-                p.signup-info-text Save your favorite tags, filters, and jobs
+                p.signup-info-text Have an answer? Post it on a question!
             .signup-info-subsections
                 i(class="fas fa-trophy")
-                p.signup-info-text Earn reputation and badges
+                p.signup-info-text Forget an answer? Review your asked Questions
         .signup-form-container
             .signup-form-box
                 
@@ -33,13 +33,6 @@ block content
                         label(for="password") Password
                         input(type="password", name="password" class="login-text-field")
                         p.signup-password Should contain at least 1 lowercase letter, uppercase letter, number, and special character (i.e. "!@#$%^&*")
-                    .signup-form-inputs-checkbox#robot
-                        input(type="checkbox", name="robot") 
-                        label(for="robot") I'm not a robot
-                    .signup-form-inputs-checkbox
-                        input(type="checkbox", name="promo") 
-                        label(for="promo" class="promo") Opt-in to receive occasional product updates, user research invitations, company announcements, and digests.
-                    
                     .login-form-inputs
                         input(type="submit", value="Sign Up" class="login-button signup-button")
                         p.signup-warning By clicking “Sign up”, you agree to our terms of service, privacy policy and cookie policy
