profile page styling almost done.

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,7 @@ html
         link(rel="stylesheet", href="/stylesheets/questions.css")
         link(rel="stylesheet", href="/stylesheets/login-style.css")
         link(rel="stylesheet", href="/stylesheets/user-signup.css")
+        link(rel="stylesheet", href="/stylesheets/user-profile.css")
 
   body
     nav.nav
