--- a/views/index.pug
+++ b/views/index.pug
@@ -5,7 +5,6 @@ append head
   link(rel="stylesheet" href="/stylesheets/index.css")
   //- add page specific js
   script(src="/javascripts/index.js" type="module" defer)
-
 block content
   h1= title
   div(id='questionButtonContainer')
@@ -14,8 +13,11 @@ block content
     each question in listOfQuestions
           div(id=`question-container-${question.id}`).questionContainer
               h2= question.title
-              p= question.content
+              span(id=`content-${question.id}`)= question.content
               a(href=`/questions/${question.id}`) Question Page
               if locals.user
                 if locals.user.id === question.user_id
                       button(id=question.id).delete-btn Delete
+                      button(id=`${question.id}-edit`).edit-btn Edit
+                        button(id=`confirm-edit-${question.id}` hidden=true).confirm-btn Confirm
+                        button(id=`cancel-edit-${question.id}` hidden=true).confirm-btn Cancel
