--- a/public/stylesheets/login-style.css
+++ b/public/stylesheets/login-style.css
@@ -68,6 +68,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 200px 0 50px 0;
+    padding: auto;
     color: red;
+}
+
+
+.logo-solo {
+    display: flex;
+    justify-content: center;
+    margin-top: 175px;
+    margin-bottom: 50px;
+}
+
+.login-page-logo {
+    width: 75px;
+    height: 75px;
 }
