--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,13 +9,12 @@ html
         link(rel="stylesheet", href="/stylesheets/questions.css")
         link(rel="stylesheet", href="/stylesheets/login-style.css")
         link(rel="stylesheet", href="/stylesheets/user-signup.css")
-        script(src="/javascripts/search-function.js" type="module" defer)
 
   body
     nav.nav
       .hambuger-container: i(class="fas fa-bars" id="hamburger")
       .nav-logo-container.nav-hover
-        a(href="/"): img(src='/images/logo.svg.png' class="nav-logo ")
+        a(href="/"): img(src='/images/AOLogo.png' class="nav-logo ")
       ul.nav-list
         li.nav-list-item: a(href="/" class="nav-hover nav-list-link") Questions
         li.nav-list-item: a(href="/questions" class="nav-hover nav-list-link") New Question
@@ -24,7 +23,7 @@ html
         .nav-search-icon-container
           .nav-search-box
             i(class="fas fa-search" id="nav-search-icon")
-        form(action="#", method="post")
+        form(action="/search", method="post")
           input(type="hidden", name="_csrf" value="csrfToken")
           input(class="form-input" type="search", name="search" placeholder='Search...')
       .nav-action-btns
