--- a/public/stylesheets/user-profile.css
+++ b/public/stylesheets/user-profile.css
@@ -27,7 +27,7 @@
     margin: 10px 0px 10px 40px;
 }
 
-.profile-posts-container{
+.profile-posts-top, .profile-posts-bottom{
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -89,6 +89,18 @@
     grid-column: 6/7;
 }
 
-.right-border{
-    border-right: 1px solid rgb(218, 218, 218);
+.profile-add-questions-box{
+    background-color: rgb(241, 241, 241);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 30px;
+    height: 200px;
+    padding: 15px;
+
+}
+
+#profile-ask-question-btn{
+    margin: 0 auto;
 }
