working on styling form

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,7 @@ html
         link(rel="stylesheet", href="/stylesheets/login-style.css")
         link(rel="stylesheet", href="/stylesheets/user-signup.css")
         link(rel="stylesheet", href="/stylesheets/user-profile.css")
+        link(rel="stylesheet", href="/stylesheets/questions-form-container.css")
 
   body
     nav.nav
