--- a/public/stylesheets/user-profile.css
+++ b/public/stylesheets/user-profile.css
@@ -27,23 +27,34 @@
     margin: 10px 0px 10px 40px;
 }
 
+.profile-content p{
+    color: rgb(109, 109, 109);
+}
+
 .profile-posts-top, .profile-posts-bottom{
     display: flex;
     align-items: center;
     justify-content: space-around;
-    gap: 20px;
 }
 
 .profile-subsection-header-box{
+    margin-left: 40px;
     display: flex;
     align-items: center;
     justify-content: flex-start;
     gap: 20px;
 }
 
-#profile-header-icon{
+#profile-header-grad-icon{
     font-size: 1.1em;
+    color: rgba(244, 130, 37, 1);
 }
+
+#profile-header-question-icon{
+    font-size: 1.1em;
+    color: rgb(10,149,255);
+}
+
 
 .profile-subsection-header{
     font-weight: 550;
@@ -56,8 +67,8 @@
     justify-content: space-evenly;
 }
 
-.profile-questions{
-    padding: 20px;
+.profile-questions, .profile-answers{
+    flex: 2;
 }
 
 .profile-subsection-list{
@@ -69,6 +80,8 @@
     display: grid;
     grid-template-columns: repeat(6,1fr);
     grid-template-rows: 70px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
 
 .profile-subsection-list-item p{
@@ -80,7 +93,8 @@
 }
 
 .profile-subsection-list-title{
-    grid-column: 2/5
+    grid-column: 2/5;
+    margin: 0;
 }
 .profile-subsection-list-link{
     grid-column: 5/6
@@ -90,7 +104,7 @@
 }
 
 .profile-add-questions-box{
-    background-color: rgb(241, 241, 241);
+    flex:1;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -103,4 +117,58 @@
 
 #profile-ask-question-btn{
     margin: 0 auto;
+}
+
+.profile-peers-box{
+    flex: 1;
+    padding: 10px;
+}
+
+.profile-answers{
+    flex: 2;
+}
+
+.profile-peers-list{
+    list-style: none;
+    padding: 20px;
+}
+
+.profile-peers-list-item{
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-top: 15px;
+}
+
+.profile-peers-list-item p,.profile-peers-list-item a  {
+    flex: 1;
+}
+
+.profile-peers-list-item p{
+    text-align: center;
+}
+
+.profile-grey{
+    background-color: rgb(241,242,243);
+}
+
+.profile-table-link:hover{
+    color:rgba(244, 130, 37, 1);
+
+}
+
+.profile-posts-bottom, .profile-add-questions-box {
+    height: 300px;
+}
+
+#profile-question-icon{
+    color: rgb(10,149,255);
+}
+
+#profile-grad-icon{
+    color: rgba(244, 130, 37, 1);
+}
+
+#profile-peers-icon{
+    color: rgb(255, 215, 0);
 }
