--- a/views/question.pug
+++ b/views/question.pug
@@ -1,12 +1,22 @@
 extends layout.pug
-
+include utils.pug
 append head
+  link(rel="stylesheet", href="/stylesheets/index.css")
   link(rel="stylesheet" href="/stylesheets/questions.css")
   script(src="/javascripts/question.js" type="module" defer)
+  script(src="/javascripts/answer.js" type="module" defer)
+  script(src="/javascripts/comment.js" type="module" defer)
 
 
 block content
-     div(id=`question-container-${question.id}`).questionContainer
+    if locals.user
+        +validationErrorSummary(errors)
+        form(action=`/questions/${question.id}/answers` method="post")
+            input(type="hidden" name="_csrf" value=csrfToken)
+            label(for="new-answer-content") New Answer
+            textarea(type="textarea" name="newAnswerContent").create-answer-content=(body === undefined)? "":body.content
+            button(id="postQuestion" type="submit") Post Answer
+    div(id=`question-container-${question.id}`).questionContainer
               h2= question.title
               span(id='question-content')= question.content
               if locals.user
@@ -15,5 +25,16 @@ block content
                     button(id=`question-edit`).edit-btn Edit
                         button(id='confirm-edit' hidden=true).confirm-btn Confirm
                         button(id='cancel-edit' hidden=true).confirm-btn Cancel
-     div(id= `answer-container`).answerContainer
-        div(id= `comment-container`).commentContainer
+    div(id= `answer-List-container`).answerContainer
+        if listOfAnswers
+            each answer in listOfAnswers
+                div(id=`answer-container-${answer.id}`).answerContainer
+                    span(id= `answer-content-${answer.id}`).answer-content= answer.content
+                    if locals.user
+                        if locals.user.id === answer.user_id
+                            div.buttonsContainer
+                                button(id=`${answer.id}-delete` data-inline="true" ).delete-btn-answer Delete
+                                button(id=`${answer.id}-edit`  data-inline="true" ).edit-btn-answer Edit
+                                button(id=`cancel-edit-${answer.id}` hidden=true).cancel-btn-answer Cancel
+                                button(id=`confirm-edit-${answer.id}` hidden=true).confirm-btn Confirm
+                    div(id= `comment-container`).commentContainer
