--- a/views/question.pug
+++ b/views/question.pug
@@ -36,5 +36,5 @@ block content
                                 button(id=`${answer.id}-delete` data-inline="true" ).delete-btn-answer Delete
                                 button(id=`${answer.id}-edit`  data-inline="true" ).edit-btn-answer Edit
                                 button(id=`cancel-edit-${answer.id}` hidden=true).cancel-btn-answer Cancel
-                                button(id=`confirm-edit-${answer.id}` hidden=true).confirm-btn Confirm
+                                button(id=`confirm-edit-${answer.id}` hidden=true).confirm-btn-answer Confirm
                     div(id= `comment-container`).commentContainer
